--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -50,7 +50,7 @@ Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and assoc
 
 Hatchery enhancement has occurred, and continues to occur in some parts of the Interior Fraser Coho SMU. Two CUs are currently considered wild populations based on the criteria developed by @withlerGeneticallyBasedTargets2018 (i.e., do not have hatchery programs; strays from out-of-basin hatchery production are limited to <3% per year), while the other three are considered integrated-wild populations (i.e., with Proportionate Natural Influence (PNI) values most likely $\geq$ 0.72; M. Arbeider, pers. comm.). Within integrated-wild populations, most fish are considered 'wild' under the WSP with parents who were born in the natural environment. The Lower Thompson CU had higher levels of hatchery enhancement between 1998 and 2005, so would likely have been considered an integrated-transition population (0.5 $\leq$ PNI < 0.72) during this period.
 
-The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUS of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by Holt et al. (in review) to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. A summary of our consideration of these criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix)). Our results from this evaluation indicated that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
+The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUS of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by Holt et al. (in review) to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. A summary of our consideration of these criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix)). Results showed that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
 
 Interior Fraser Coho is included in the first batch of major stocks proposed for regulation under the Fish Stock Provisions of the revised Fisheries Act, necessitating the development of LRPs for this SMU.
 <!--KH: I have included this here to be consistent with WCVI chinook, but we should confirm at some point that this is publishable. Hopefully by the time this paper is published, batch 1 stocks will be prescribed .... -->
@@ -574,7 +574,7 @@ In addition to the LRP estimation methods presented so far in this case study, w
 
 In general, estimated LRP breaches coincided with low points in the aggregate abundance time series (2000, 2005 - 2007 and 2015-2017). However, there were differences among methods in the years that SMU status was estimated to be below the LRP, as well as a couple methods for which status was never estimated to be below the LRP (Prop: Sgen-Ricker and Abund: Logistic: IFCRT).  
 
-Comparison of SMU status estimates over time for all LRP estimation methods that used S~gen~ estimates from the base Ricker model showed differences in statuses between the proportion- and aggregate abundance methods (status bars 2-5 in Figure \@ref(fig:coho-statusPlot-withBars)). Under the 'Prop: Scanner-Ricker' method, the LRP was breached in years 2000 and 2015-2017, but for the 'Prop: Sgen-Ricker' method, the LRP was only breached in the year 2000. The decision tree for the Pacific Salmon Status Scanner includes a step in which CU status is designated as Red when the generational mean spawning abundance is less than 1500 spawners (Figure \@ref(fig:decision-tree)). Because estimated S~gen~ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance exceeds S~gen~. This situation occured for the Fraser Canyon CU in 2015-2017. Therefore, LRP methods that use the Pacific Salmon Status Scanner to characterize CU status can be more precautionary than methods that rely on a single S~gen~ benchmark.
+Comparison of SMU status estimates over time for all LRP estimation methods that used S~gen~ from the base Ricker model showed differences in statuses between the proportion- and aggregate abundance methods (status bars 2-5 in Figure \@ref(fig:coho-statusPlot-withBars)). Under the 'Prop: Scanner-Ricker' method, the LRP was breached in years 2000 and 2015-2017, but for the 'Prop: Sgen-Ricker' method, the LRP was only breached in the year 2000. The decision tree for the Pacific Salmon Status Scanner includes a step in which CU status is designated as Red when the generational mean spawning abundance is less than 1500 spawners (Figure \@ref(fig:decision-tree)). Because estimated S~gen~ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance exceeds S~gen~. This situation occured for the Fraser Canyon CU in 2015-2017. Therefore, LRP methods that use the Pacific Salmon Status Scanner to characterize CU status can be more precautionary than methods that rely on a single S~gen~ benchmark.
 
 In the years 2005-2006, SMU status for both the 'Abund: Proj: Sgen-Ricker' and 'Abund: Logistic:Sgen-Ricker' methods fell below the LRP, while the proportional methods (labelled 'Prop:') did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual S~gen~ estimates). Declines in the  abundance of the Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance LRP, the Fraser Canyon CU that triggered Red status in 2015-2017 exceeded 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach. 
 
@@ -582,6 +582,8 @@ When the Ricker-priorCap model was used to estimate S~gen~ instead of the base R
 
 Finally, SMU status was below the LRP in four years (2006, 2015-2017) out of the 21 years for the 'Prop: IFCRT' method, but was only triggered in 2006 under the 'Abund: Logistic: IFCRT method' (status bars 10-11 Figure \@ref(fig:coho-statusPlot-withBars)). The 'Abund: Logistic: IFCRT method' produced the lowest LRP of all logistic methods (Figure \@ref(fig:coho-IM-logisticFit2020) and Table \@ref(tab:logisticLRPs2020)), therefore the LRP tended to get breached less often.  
 
+Despite the differences in status estimates in some years for proportional and aggregate abundance LRPs highlighted above, estimated status tended to match in more years than not for proportional and aggregate abundance methods. Out of the 21 years available for comparison, the number of years with consistent status estimates for proportional and aggregate abundance LRPs ranged from 15 - 18 years (71 - 86% of years), depending on the exact methods being compared.  The proportion of years with consistent status estimates was lowest when comparing the Prop:Scanner-Ricker method to the Abund:Logistic:Sgen-Ricker and Abund:Proj:Sgen-Ricker methods (15 / 21 years; 72%).  This proportion was higher when comparing the Ricker_priorCap model was used to estimate S~gen~. The proportion of years with consistent status estimates was lowest when comparing the Prop:Scanner-Ricker_priorCap method to the Abund:Logistic:Sgen-priorCap and Abund:Proj:Sgen-priorCap methods (86% and 81%, respectively). 
+  
   
 
 ```{r coho-statusPlot-withBars, fig.cap="Historical evaluation of status relative to LRP options considered for Interior Fraser Coho. The black line shows the 2000-2020 generational mean aggregate spawning abundance to the SMU. Red bars indicate years in which SMU status would have been assessed as being below the LRP. Estimates of Sgen benchmarks and aggregate abundance LRPs were based on data available up to 2020", warning=FALSE, echo=FALSE, out.width = '80%',  fig.align="center"}
@@ -596,9 +598,11 @@ knitr::include_graphics("figure/coho-statusPlot_withBars2020.png")
 The Interior Fraser Coho SMU is considered a data-rich SMU because it has stock-recruitment time series for all five CUs within the SMU, which allowed for the estimation of stock recruitment-based benchmarks (S~gen~). However, time series were restricted to years after 1998, when spawner abundance data were collected with more consistent methodologies and regularity. This period also aligns with the low productivity period [@deckerAssessmentInteriorFraser2014] when the SMU abundance is considered depressed relative to historical levels. Despite the short time series, Interior Fraser Coho are well-suited for looking at the application of aggregate abundance LRPs due to the long history of using aggregate abundance recovery targets and fisheries reference points [@ifcrtConservationStrategyCoho2006; @kormanEvaluationFrameworkAssessing2019; @arbeiderInteriorFraserCoho2020]. While we were able to estimate aggregate abundance LRPs using a suite of CU-level benchmarks and LRP estimation methods (logistic regression and projection), our results highlight variability in status against aggregate abundance LRPs that in some cases deviates from status against proportional LRPs. Our results also highlight the sensitivity of logistic regression based LRPs to data availability.
 
 
-### Alternative LRP Methods
+### Proportional vs. Aggregate Abundance LRP Methods
 
-Comparisons of status between the abundance-based methods and the proportional methods yielded mixed results. Status tended to drop below proportional LRPs when abundance of individual CUs was low (2000-2001, 2015-2017), and drop below aggregate abundance LRPs when aggregate abundances were low (2006-2007). As a result, proportional LRPs were breached in years with low abundance in only one CU (e.g, 2000, 2015-2017) whereas the aggregate abundance methods did not. In comparison, status was generally consistent for the scenarios in which the Ricker_priorCap model was used. In this case, LRPs were often breached in similar years. This result occurred because estimated S~gen~ and aggregate abundance LRPs were higher under the Ricker_priorCap model, which resulted in a more frequent occurrence of years with both aggregate abundance below the LRP and individual CUs below benchmarks.
+Comparisons of status between the abundance-based methods and the proportional methods yielded mixed results. While there were differences in the years in which proportional and aggregate-abundance based methods dropped below LRPs for a given method of characterizing CU status, status tended to match in more years than not. Out of the 21 years available for comparison, the number of years with consistent status estimates for proportional and aggregate abundance LRPs ranged from 15 - 18 years (72-86% of years), depending on the exact methods being compared.
+
+Consistency between proportional and aggregate abundance LRPs depended on the method used to assess CU status. For methods using the base Ricker model, status tended to drop below proportional LRPs when abundance of individual CUs was low (2000-2001, 2015-2017), and drop below aggregate abundance LRPs when aggregate abundances were low (2006-2007). As a result, proportional LRPs were breached in years with low abundance in only one CU (e.g, 2000, 2015-2017) whereas the aggregate abundance methods did not. In comparison, status was generally consistent for the scenarios in which the Ricker_priorCap model was used with LRPs breached in similar years. This result occurred because estimated S~gen~ and aggregate abundance LRPs were higher under the Ricker_priorCap model, which resulted in a more frequent occurrence of years with both aggregate abundance below the LRP and individual CUs below benchmarks. Finally, when the IFCRT distributional target was used, the proportional LRP was breached for 3 years in which the aggregate abundance was not (2015-2017) due to low abundance in one CU. 
 
 When considering proportional LRPs, comparisons between using a single metric benchmark to estimate CU status (i.e., S~gen~) and using the Pacific Salmon Status Scanner to estimate CU status yielded similar results. This occurred because the Salmon Scanner relies on S~gen~ benchmarks when those are available. Exceptions occur when an estimated S~gen~ is less than the absolute threshold of 1500 spawners, as occurred for the Fraser Canyon CU. 
 
@@ -617,7 +621,7 @@ One approach to accounting for uncertainty in underlying model structure is to i
 
 Retrospective analyses of logistic regression LRP options showed that LRPs were sensitive to data availability, with LRP estimates changing over time as more data became available. In addition, relatively small shifts in estimated S~gen~ over time meant that logistic models based on S~gen~ were sometimes unable to converge on a solution even with more data. This failure to converge was a result of a lack of overlap between aggregate abundance levels associated with 'successes' and 'failures', which is a requirement for logistic models. This limitation did not occur for the IFCRT logistic regression approach, in which the absolute threshold used to define CU status was constant over time.
 
-Missing data scenarios, in which 1 or 2 CUs were removed from the data set, further highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures'. In addition, we found that removing CUs in logistic regression LRPs resulted in an increase in uncertainty of estimated status.  However, despite these limitations, the 95% confidence intervals for the missing data scenarios usually overlapped with status based on all CUs being included. This result suggest that our assumption of CU representativeness for stock status within the Interior Fraser Coho SMU may be supported. Future work on this SMU (or, other SMUs wishing to apply these methods) could use retrospective analyses of proportional approaches to see if status estimates remain stable when 1 or 2 CUs are removed from the data set.  The extent to which this result can be applied to other SMUs is expected to be dependent on the level of covariation in CU status among CUs within an SMU.
+Missing data scenarios, in which 1 or 2 CUs were removed from the data set, further highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures'. In addition, we found that removing CUs in logistic regression LRPs resulted in an increase in uncertainty of estimated status.  However, despite these limitations, the 95% confidence intervals for the missing data scenarios usually overlapped with status based on all CUs being included. This result suggests that our assumption of CU representativeness for stock status within the Interior Fraser Coho SMU, as described in Appendix \@ref(app:coho-appendix), may be supported. Future work on this SMU (or, other SMUs wishing to apply these methods) could use retrospective analyses of proportional approaches to see if status estimates remain stable when 1 or 2 CUs are removed from the data set.  The extent to which this result can be applied to other SMUs is expected to be dependent on the level of covariation in CU status among CUs within an SMU.
 
 
 <!-- Need to adress this from intro:
