--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -63,7 +63,7 @@ While the assessment of Pacific salmon under the WSP has focused on setting benc
 In addition to biological reasons for assessing status at the spatial scale of CUs as described under the WSP, this scale is also relevant for key threats and management response of Pacific salmon, e.g., restoration of freshwater spawning or rearing habitat and hatchery enhancement. While the Fish Stocks provisions pertain to fisheries at scales relevant to harvest management, for many SMUs fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. Threats and management responses also extend to larger regional scales, e.g., mitigating climate impacts. Therefore, stock assessments are required at a hierarchy of spatial scales from CUs to aggregates of CUs at regional scales, sometimes across Pacific salmon species. 
 
 
-Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against for LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. At finer spatial scales, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider distribution at sub-populations within CUs when those are considered to be important for the sustainability of the CU or SMU.
+Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against for LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. At finer spatial scales, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider distribution at sub-populations within CUs when those are considered to be important for the sustainability of the CU or SMU. Identifying relevant spatial scales within CUs can be challenging due to uncertainty in meta-population dynamics and its impacts on long-term viability.
 
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely aligned with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are often not aligned with Conservation Units - the biological unit of conservation under DFO's WSP - and are not considered further here. Although the LRPs presented here are applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety management decisions.
 
