--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -7,12 +7,12 @@ LRP methods require assessments of status at the scale of CUs. Abundance data re
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item Hatcheries can also reduce wild genetic diversity and fitness and are considered a risk factor for the long-term persistence of CUs
-\item Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and are not usually included in assessments of biological status.
+\item Hatcheries can reduce wild genetic diversity and fitness and are considered a risk factor for the long-term persistence of CUs
+\item Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and are not usually included in assessments of biological status
 \item Following previous Science guidance, we recommend including only populations without significant enhancement in analyses of biological status under the WSP
 \item The data used to assess the contribution of hatcheries to spawning are associated with high uncertainties, due to the tagging method, sampling rates, uncertainty in survival of natural vs. hatchery-origin fish, and observation errors
-\item Populations dominated by wild fish but influenced by hatchery stays (called 'wild stray-influenced' populations) are included in CU assessments, but these out-of-basin strays may bias estimates of natural production and resulting assessments
-\item In addition, when data are available, WSP status assessments have generally removed the demographic influence of hatchery production from time-series of abundances, among populations included in analyses (i.e., after removing highly enhanced populations). Where such data are not available, WSP assessments generally rely on total spawner abundances that includes hatchery contribution, representing an additional source of uncertainty.
+\item Populations dominated by wild fish but influenced by hatchery stays (called 'wild stray-influenced' populations) are generally included in CU assessments, but these out-of-basin strays may bias estimates of natural production and resulting assessments, representing a source of uncertainty
+\item Following previous WSP status assessments, when data are available, the demographic influence of hatchery production are removed from time-series of abundances. This step applies to populations included in analyses, after removing highly enhanced populations. Where data to differentiate hatchery- from natural-origin spawners are not available, total spawner abundances include hatchery contributions, representing an additional source of uncertainty
 \end{itemize}
 \end{tcolorbox}
 
@@ -57,7 +57,11 @@ In some cases where hatchery-origin fish are not marked or sampled on the spawni
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item ...
+\item We recommend that CU-level status consider multiple metrics, either integrated through formal status assessments or through the Pacific Salmon Status Scanner, as called the Salmon Scanner
+\item The Salmon Scanner provides status from a composite of metrics and benchmarks on spawner abundances, and long- and short-term trends in spawner abundances
+\item Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs, including those based on stock-recruitment relationships, percentiles of historical spawner abundances and freshwater spawning and rearing capacity.
+\item Distributional metrics of spawning have been included in formal WSP assessments, but have not yet been incorporated into the Salmon Scanner, in part due to a lack of rigorous benchmarks on these metrics
+\item For the purposes of LRP development, CU statuses were derived in two ways: using multiple metrics applied within the Salmon Scanner and a single metric on spawner abundances to demonstrate the consistency in these approaches and highlight any differences.
 \end{itemize}
 \end{tcolorbox}
 
@@ -88,17 +92,14 @@ To be consistent with the multidimensional approach to WSP status assessments de
 \end{table}
 
 
-Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions, S~gen~ is recommended by @holtEvaluationBenchmarksConservation2009. Where recruitment time-series are not available and productivity is assumed to be moderate or high and harvest rates moderate or low, specified percentiles of observed spawner time-series, (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon stocks across the Pacific region to predict reference points for Chinook stocks without recruitment data.
+Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions, S~gen~ is recommended by @holtEvaluationBenchmarksConservation2009. When applying stock-recruitment analyses, the spatial scale of density dependence should be carefully considered, which may be smaller or larger than the CU. Where recruitment time-series are not available and productivity is assumed to be moderate or high and harvest rates moderate or low, specified percentiles of observed spawner time-series, (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon stocks across the Pacific region to predict reference points for Chinook stocks without recruitment data.
 
-Similarly, benchmarks on long-term and short-term trends in spawner abundances have been identified. Long-term trends are measured by the ratio of recent generational geometric average spawner abundances relative to the long-term geometric average, and short-term trends are measured as the percent change in spawner abundances over 3 generations, the time period used in COSEWIC assessments [@holtEvaluationBenchmarksConservation2009].
+Similarly, metrics and benchmarks on long-term and short-term trends in spawner abundances have been identified. Long-term trends are measured by the ratio of recent generational geometric average spawner abundances relative to the long-term geometric average, and short-term trends are measured as the percent change in spawner abundances over 3 generations, the time period used in COSEWIC assessments [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks have been identified on these metrics that represent levels below which there is increased risk of extinction [@holtIndicatorsStatusBenchmarks2009].
 
-In addition, metrics on the distribution of spawning within a CU can be considered in WSP assessments [@peacockReviewMetricsDistribution2010a; @peacockMetricsSamplingDesigns2012; @dfoIntegratedBiologicalStatus2016], but may not be required for all salmon species. In one example, the distribution of spawners across spawning sites and contractions in that distribution over time were considered in a WSP assessment for southern BC Chinook [@dfoIntegratedBiologicalStatus2016]. In addition, recovery targets for Interior Fraser Coho account for the distribution of spawners among sub-populations  [@ifcrtConservationStrategyCoho2006].
+In addition, metrics on the distribution of spawning within a CU can be considered in WSP assessments [@peacockReviewMetricsDistribution2010a; @peacockMetricsSamplingDesigns2012; @dfoIntegratedBiologicalStatus2016], but may not be required for all salmon species and to-date have not been included in the Salmon Scanner. In one example, the distribution of spawners across spawning sites and contractions in that distribution over time were considered in a WSP assessment for southern BC Chinook [@dfoIntegratedBiologicalStatus2016]. In addition, recovery targets for Interior Fraser Coho account for the distribution of spawners among sub-populations  [@ifcrtConservationStrategyCoho2006]. One challenge to applying metrics on distribution is identifying benchmarks that distinguish populations with increased risk of extinction.
 
-For the purposes of LRP development, CU status were derived from both the Pacific Salmon Status Scanner and individual metrics on spawner abundances to demonstrate the consistency in these approaches. However, when only a single metric is applied to derive status, there is a risk of providing a misleading assessment if other metrics that would have also been used in a multidimensional assessment diverge in status from the single abundance-based metric, but are not considered. A full review of the Salmon Scanner will be provided in Pestal et al. (In prep.).
+For the purposes of LRP development, CU statuses were derived in two ways, using the multiple metrics applied within the Pacific Salmon Status Scanner and a single metric on spawner abundances. We applied both to demonstrate the consistency in these approaches and highlight any differences. When only a single metric is applied to derive status, there is a risk of providing a misleading assessment if other metrics that would have also been used in a multidimensional assessment diverge in status from the single abundance-based metric, but are not considered. A full review of the Salmon Scanner will be provided in Pestal et al. (In prep.).
 
-<!-- 
-KH: I revised the last sentence of the above paragraph because I got hung up on the term 'overall status'. The original version was:
-When only a single metric is applied to derive status, there is a risk of providing a misleading assessment if overall status is informed from additional metrics which diverge from abundance-based metrics but are not considered. -->
 
 When assessing CU status relative to abundance-based lower benchmarks, we use generational mean spawner abundances as a basis for determining whether each CU is above or below its lower benchmark. Generational smoothing integrates status over cohorts within a generation, which can exhibit relatively independent dynamics <!--is there a good reference for this? CH: not sure, but can look for one later-->. This approach reduces noise in annual CU status determination due to annual fluctuations in CU abundances from any single cohort. It also makes our determination of CU status consistent with the approach taken for abundance-based benchmarks in WSP assessments and the Pacific Salmon Status Scanner.
 
@@ -108,7 +109,11 @@ When assessing CU status relative to abundance-based lower benchmarks, we use ge
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize} 
-\item ...
+\item Proportional LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above the Red status zone, with a default of 100% as the LRP
+\item Proportional LRPs are recommended as the default approach for estimating LRPS for Pacific salmon and triggering rebuilding plans under the *Fisheries Act*
+\item Two advantages of proportional LRPs is that they are consistent with the established framework for status assessments under the WSP and the spatial scale of proportional LRPs can be adapted to match various management levers, from CU to regional scales.
+
+
 \end{itemize}
 \end{tcolorbox}
 
@@ -120,11 +125,10 @@ Proportion-based or proportional LRPs are calculated from the proportion of CUs 
 <!--CH: revserse order of principles in each section to align with Julie's new numbering-->
 Proportional LRPs are based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer reviewed WSP status assessments or the Pacific Salmon Status Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. Proportional LRPs are aligned with Principle 2 to the extent that serious harm is indicated by status of any one CU being in the Red zone under the WSP, recognizing that risk of loss of stock structure can itself be a form of serious harm. Proportional LRPs are operational (Principle 3) as they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, proportional LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU level benchmarks to CU statuses, LRPs and SMU statuses.  Proportional LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
 
-A further advantage of this method is that it can easily be extended to other spatial scales under which Pacific salmon are managed.  
-For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide of 2019.  
+A further advantage of this method is that it can easily be extended to other spatial scales under which Pacific salmon are managed. For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide of 2019.  
 
 
-In addition to proportional LRPs, we considered two LRPs on aggregate SMU-level abundance that account for component CU-level statuses: (1) logistic regression-based LRPs, or simply, logistic regression LRPs and (2) projection-based, or simply projection LRPs (Fig. \@ref(fig:LRP-types)), which are described below. Both of these LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but they differ in that logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  The reliability of aggregate-abundance LRPs to represent thresholds of serious harm at the CU level depend on the strength of the underlying relationship between aggregate abundance and CU statuses as inferred from observed data. Both of these LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, with all else remaining equal.  
+In addition to proportional LRPs, we considered two LRPs on aggregate SMU-level abundance that account for component CU-level statuses: (1) logistic regression-based LRPs, or simply, logistic regression LRPs and (2) projection-based, or simply projection LRPs (Fig. \@ref(fig:LRP-types)). Both aggregate abundance LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but they differ in that logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  The reliability of aggregate-abundance LRPs to represent thresholds of serious harm at the CU level depend on the strength of the underlying relationship between aggregate abundance and CU statuses as inferred from observed data. Both of these LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, with all else remaining equal.  
 
 \begin{figure}[ht]
 \centering
@@ -142,12 +146,11 @@ In addition to proportional LRPs, we considered two LRPs on aggregate SMU-level 
 (\#fig:LRP-types)
 \end{figure}
 
-<!-- CH removed from before \caption{} line
-
--->
 
 
-### Logistic regression LRPs {#logisticMethods}
+### Aggregate Abundance LRPs
+
+**Logistic regression LRPs**
 
 Logistic regression LRPs are derived from an empirically estimated relationship between CU-level statuses and aggregate SMU abundance. This method extends the proportional LRP by identifying the aggregate abundance level that has historically been associated with all component CUs having status above the Red zone, as approximated from status on a single metric of spawner abundances relative to a lower benchmark. For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than the lower benchmark and 0 (failure) = all CUs did not have status greater than the lower benchmark, or at least one CU was assessed below the lower benchmark. A logistic regression is then fit to these outcomes to estimate the probability that all CUs will have statuses greater than Red as a function of aggregate SMU spawner abundances. The following logistic regression equation is used to estimate LRPs,
 
@@ -196,7 +199,7 @@ Reliability of estimation (Principle 4) depends on the reliability of underlying
 
 <!--CH: moved to uncertainties section in last chapter "Also, it is not possible to assess sensitivity of LRPs to  structural assumptions about covariance in population dynamics among CU and the relationship between aggregate abundances and CU statuses, as the LRP depends only on the logistic fit to observed data." -->
 
-**Projection LRPs** {#projectedMethods}
+**Projection LRPs** 
 
 Similar to logistic regression LRPs, projection LRPs rely on an underlying relationship between aggregate abundances and status of component CUs to identify an LRP based on aggregate abundance. However, unlike logistic regression LRPs, for projection LRPs the aggregate abundances where there is a high probability of all CUs being above their lower benchmark is identified from forward projections instead of historical data.   
 
