Updates to case study paper

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -13,17 +13,14 @@ The Interior Fraser Coho SMU is well-suited for looking at the application of ag
 
 The SMU includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. Like most Coho Salmon, Interior Fraser Coho spend at least one full year in freshwater as fry before migrating to the ocean as smolts [@arbeiderInteriorFraserCoho2020]. Most (88%) Interior Fraser Coho have a 3-year life history, in which they leave freshwater in their second year and spend 18 months at sea prior to returning to their natal system to spawn. The remaining 12% have a 4-year life history in which they spend an additional year in freshwater before migrating as smolts in their third year. Both the 3-year and 4-year life histories spend 18 months at sea. Less than 1% of Interior Fraser Coho are believed to return as jacks (precocious mature males that spend only 6 months as sea) or at ages older than 4 years [@arbeiderInteriorFraserCoho2020].
 
-WSP CUs have been identified for Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015, Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance above a 1000-spawner threshold in each of these smaller subpopulation units [@ifcrtConservationStrategyCoho2006, Table \@ref(tab:cohoCU2SP)]. The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic differentiation. The 11 subpopulations are described in detail by the @ifcrtConservationStrategyCoho2006. 
+Five WSP CUs have been identified for Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance above a 1000-spawner threshold in each of these smaller subpopulation units [@ifcrtConservationStrategyCoho2006, Table \@ref(tab:cohoCU2SP)]. The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic differentiation. The 11 subpopulations are described in detail by the @ifcrtConservationStrategyCoho2006.  
+
+Only the upper portion of the Fraser Canyon CU (upstream of Hell's Gate on the Fraser River) is included in our delineation of Interior Fraser Coho. This delineation is consistent with previous analyses for this SMU. As a result, Nahatlatch is the only sub-population included in our description of the Fraser Canyon CU. Kawakawa Creek has been excluded.
 
 
-```{r coho-map, fig.cap="The five Conservation Units that make up the Interior Fraser Coho Stock Management Unit.", out.width = '70%', warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-map, fig.cap="Distribution of the Interior Fraser Coho SMU, including the five CUs that make up the SMU. Only the upper portion of the Fraser Canyon CU (upstream of Hell's Gate) is shown here to be consistent with the spatial scale of the data that was used for analyses.", out.width = '70%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-map.png")
 ```
-
-<!-- Comment from Chuck: Please note that this map does not align with the text.  The text talks about how the IFC are upstream of Hell’s Gate but this map includes rivers that are downstream of that, including rivers that are downstream of Hope. Can the map be corrected to align with the text? If not then please identify this discrepancy in the map caption. 
-o	My question for Luke: What is the source of these files?  Does Fraser Canyon CU include streams downstream of Hell’s Gate?  If so, maybe text should be revised???
-Also - for me to do: confirm CU designation in Holtby and Circuna -->
-
 
 
 +-------------------+--------------------------------+
@@ -624,16 +621,12 @@ Retrospective analyses of logistic regression LRP options showed that LRPs were 
 Missing data scenarios, in which 1 or 2 CUs were removed from the data set, further highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures'. In addition, we found that removing CUs in logistic regression LRPs resulted in an increase in uncertainty of estimated status.  However, despite these limitations, the 95% confidence intervals for the missing data scenarios usually overlapped with status based on all CUs being included. This result suggests that our assumption of CU representativeness for stock status within the Interior Fraser Coho SMU, as described in Appendix \@ref(app:coho-appendix), may be supported. Future work on this SMU (or, other SMUs wishing to apply these methods) could use retrospective analyses of proportional approaches to see if status estimates remain stable when 1 or 2 CUs are removed from the data set.  The extent to which this result can be applied to other SMUs is expected to be dependent on the level of covariation in CU status among CUs within an SMU.
 
 
-<!-- Need to adress this from intro:
-
-We considered the 4 criteria identified in Holt et al. (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) population capacity. Although statuses are available for all CUs in this SMU, we consider the application of these criteria to evaluate how decisions about whether CU status can be inferred from other CUs based on these criteria differ from the results of sensitivity analyses presented in the main paper.  As part of these sensitivity analyses, we explored how removing one or two CUs affected LRP estimation and status assessments against the LRP.
--->
-
 Taken together, these retrospective results highlight that caution should be used when applying logistic regression LRPs. While they did provide similar estimates of SMU status as proportional methods for several (but not all) years in the historical comparison, they were sensitive to reductions in data availability. For the specific case of Interior Fraser Coho, retrospective performance may improve in the future as more data become available to improve the statistical power of logistic regression fits.
 
 ### Projection LRPs
 
-Given that the estimation of logistic regression LRPs were sensitive to data availability, projection LRPs may provide more reliable estimates for cases in which population and fishery dynamics can be modelled.  Projection LRPs also have the advantage of being able to incorporate uncertainty about current (and future) population and / or fishery dynamics into LRP estimates, whereas logistic regression LRPs represent conditions that have been previously experienced, which may or may not persist into the future.
+Projection LRPs have the advantage of being able to incorporate uncertainty about current (and future) population and / or fishery dynamics into LRP estimates, whereas logistic regression LRPs represent conditions that have been previously experienced, which may or may not persist into the future. Projection LRPs also allow key structural uncertainties to be incorporated into LRP estimates through the combination of multiple projection scenarios. For example, in the current application, we chose not to apply a third formulation of the Ricker model with depensatory mortality that has been used previously [@kormanEvaluationFrameworkAssessing2019; @arbeiderInteriorFraserCoho2020]. However, future applications of projection LRP methods for Interior Fraser coho could easily incorporate depensation as an additional scenario in a model-average approach if this was considered a key uncertainty to be respresented.
+
 
 The sensitivity of projection LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, we set exploitation rates at the recent average as fishery restrictions since 1998 been stable. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above S~gen~ given that constant exploitation rate. However, Interior Fraser Coho are not managed using a fixed ER policy.  While harvest has been relatively constant for several recent years, target harvest rates can vary among years for several reasons, including fishery plans for other species (e.g., Fraser Sockeye Salmon). For years in which target exploitation rates are increased, the LRP would also need be increased accordingly to ensure that the underlying objective of all CUs above S~gen~ could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above S~gen~. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix). As a result, projection LRPs are not static measures of serious harm, as commonly developed for other stocks and species.
 
