--- a/caseStudyWP/01-chap1.Rmd
+++ b/caseStudyWP/01-chap1.Rmd
@@ -28,7 +28,10 @@ The case studies considered include:
 
 3)	Inside South Coast Chum Salmon (*O. keta*;  excluding Fraser River CUs). 
 
-Each of these SMUs consists of 3-7 CUs and was selected to represent a different level of data availability ranging from data rich (Interior Fraser Coho) to data-limited (Inside South Coast Chum and West Coast Vancouver Island Chinook). For each case study, the set of LRP estimation methods considered is a function of available data and previously developed assessment methods for the SMU. The LRPs presented in this paper are illustrative and not meant to provide formal assessments, as they may require more thorough review of data and assumptions with local analysts and partners.  
+Each of these SMUs consists of 3-7 CUs and was selected to represent a different level of data availability ranging from data rich (Interior Fraser Coho) to data-limited (Inside South Coast Chum and West Coast Vancouver Island Chinook). For each case study, the set of LRP estimation methods considered is a function of available data and previously developed assessment methods for the SMU. 
+
+
+The LRPs presented in this paper are for demonstration purposes only, and not meant to provide formal LRP estimates. The development of LRPs to support implementation of the *Fisheries Act* for our case study stocks may require a more thorough review of data and assumptions with local analysts and partners than has been taken here.  
 
 
 
